# sigcraft

./: .gitignore  CMakeLists.txt  camera.cpp  camera.h  chunk_mesh.cpp  chunk_mesh.h  load_png.cpp  load_png.h  main.cpp  world.cpp  world.h
enklume/include/enklume/: block_data.h
enklume/src/: block_data.c
shaders/: basic.frag  basic.vert  closesthit.rchit  miss.rmiss  rayanyhit.rahit  raygen.rgen  shadowanyhit.rahit  shadowhit.rahit  shadowhit.rchit  shadowmiss.rmiss
